Refactor resource presets (#177)
